--- a/templates/home.html
+++ b/templates/home.html
@@ -25,7 +25,7 @@
     <nav class="chat">
         <a id ="Chat Here" href = "/chat" class="chat__link" data-link>Chat Here</a>
         <div id="log"></div>
-        <form id="form">
+        <form id="formChat">
             <input type="submit" id="btn" value="Send" />
             <input type="text" id="msg" size="64" autofocus />
         </form>
@@ -139,60 +139,60 @@
             You're are Logged in.
         </h4>
     </div>
+    <!---->
 
-</body>
-<!---->
-<!--Adding JS for the chat here as js/chat.js not working-->
 <!--<script src='/js/Login.js'></script>-->
-<script type="text/javascript">
-    window.onload = function () {
-        var conn;
-        var msg = document.getElementById("msg");
-        var log = document.getElementById("log");
-    
-        function appendLog(item) {
-            var doScroll = log.scrollTop > log.scrollHeight - log.clientHeight - 1;
-            log.appendChild(item);
-            if (doScroll) {
-                log.scrollTop = log.scrollHeight - log.clientHeight;
-            }
-        }
-    
-        document.getElementById("form").onsubmit = function () {
-            if (!conn) {
-                return false;
-            }
-            if (!msg.value) {
-                return false;
-            }
-            conn.send(msg.value);
-            msg.value = "";
-            return false;
-        };
-    
-        if (window["WebSocket"]) {
-            conn = new WebSocket("ws://" + document.location.host + "/ws");
-            conn.onclose = function (evt) {
-                var item = document.createElement("div");
-                item.innerHTML = "<b>Connection closed.</b>";
-                appendLog(item);
-            };
-            conn.onmessage = function (evt) {
-                var messages = evt.data.split('\n');
-                for (var i = 0; i < messages.length; i++) {
-                    var item = document.createElement("div");
-                    item.style.color = '#80ed99'
-                    item.innerText = messages[i];
-                    appendLog(item);
+<!--Adding JS for the chat here as js/chat.js not working-->
+    <script type="text/javascript">
+        window.onload = function () {
+            var conn;
+            var msg = document.getElementById("msg");
+            var log = document.getElementById("log");
+        
+            function appendLog(item) {
+                var doScroll = log.scrollTop > log.scrollHeight - log.clientHeight - 1;
+                log.appendChild(item);
+                if (doScroll) {
+                    log.scrollTop = log.scrollHeight - log.clientHeight;
                 }
+            }
+        
+            document.getElementById("formChat").onsubmit = function () {
+                if (!conn) {
+                    return false;
+                }
+                if (!msg.value) {
+                    return false;
+                }
+                conn.send(msg.value);
+                msg.value = "";
+                return false;
             };
-        } else {
-            var item = document.createElement("div");
-            item.innerHTML = "<b>Your browser does not support WebSockets.</b>";
-            appendLog(item);
-        }
-    };
-    </script>
+        
+            if (window["WebSocket"]) {
+                conn = new WebSocket("ws://" + document.location.host + "/ws");
+                conn.onclose = function (evt) {
+                    var item = document.createElement("div");
+                    item.innerHTML = "<b>Connection closed.</b>";
+                    appendLog(item);
+                };
+                conn.onmessage = function (evt) {
+                    var messages = evt.data.split('\n');
+                    for (var i = 0; i < messages.length; i++) {
+                        var item = document.createElement("div");
+                        item.style.color = '#80ed99'
+                        item.innerText = messages[i];
+                        appendLog(item);
+                    }
+                };
+            } else {
+                var item = document.createElement("div");
+                item.innerHTML = "<b>Your browser does not support WebSockets.</b>";
+                appendLog(item);
+            }
+        };
+        </script>
+</body>
 <!-- this script runs register/login/chat modal -->
 <script src="/js/register.js"></script>
 <script src="/js/login.js"></script>
