--- a/css/home.css
+++ b/css/home.css
@@ -344,3 +344,31 @@ h2 {
 }
 
 /*~~~~~~~~~~~~~~~~End of 'chat' css ~~~~~~~~~~~~~~~*/
+
+/*~~~~~~~~~~~~~~~Start of Logged-in Users Log~~~~~~~~~~*/
+.loggedInUsers {
+    position: fixed;
+    top: 0;
+    right:5cm;
+    width: var(--loggedInUsers-width);
+    height: 100vh;
+    /*background-image: url("/css/img/side.jpg");
+    background-position: center;*/
+    font-family: cursive;
+    font-size: 2rem;
+}
+
+.loggedInUsers__link {
+    display: block;
+    padding: 12px 18px;
+    text-decoration: none;
+    color: #eeeeee;
+    font-weight: 500;
+}
+
+.loggedInUsers__link:hover {
+    background-color: rgb(9, 162, 209);
+    color: black;
+}
+
+/*~~~~~~~~~~~~~~~End of Logged-in Users Log~~~~~~~~~~~~*/
