Logout and listy of users

--- a/templates/home.html
+++ b/templates/home.html
@@ -18,7 +18,7 @@
         <a id ="login" onclick="openLogin() ;"class="nav__link" data-link>Login</a>
         <a id ="post" href = "/posts" class="nav__link" data-link>Posts</a>
         <a id="profile" href = "/profile" class="nav__link" data-link>Profile</a>    
-        <a id="logout" href = "/" class="nav__link" style="display:none" data-link>LogOut</a>    
+        <a id="logout" onclick="DeleteSession() ;" href = "/" class="nav__link" style="display:none" data-link>LogOut</a>    
 
     </nav>
 
