--- a/css/home.css
+++ b/css/home.css
@@ -356,6 +356,7 @@ h2 {
     background-position: center;*/
     font-family: cursive;
     font-size: 2rem;
+    display:none;
 }
 
 .loggedInUsers__link {
