--- a/templates/home.html
+++ b/templates/home.html
@@ -34,8 +34,8 @@
     <nav class="loggedInUsers">
         <a id="Select User" href = "/loggedInUsers" class="loggedInUsers__link" data-link><strong>Logged-in Users</strong></a>
         <div id="usersLog">
-            <div style="color: rgb(128, 237, 153);"><a id="Select User" href = "/loggedInUsers" class="loggedInUsers__link" data-link>Arabella</a></div>
-            <div style="color: rgb(128, 237, 153);"><a id="Select User" href = "/loggedInUsers" class="loggedInUsers__link" data-link>Duke Oton</a></div>
+          <!--<div style="color: rgb(128, 237, 153);"><a id="Select User" href = "/loggedInUsers" class="loggedInUsers__link" data-link>Arabella</a></div>
+            <div style="color: rgb(128, 237, 153);"><a id="Select User" href = "/loggedInUsers" class="loggedInUsers__link" data-link>Duke Oton</a></div>-->
         </div>
     </nav>
 
