users show vertically in chat

--- a/templates/home.html
+++ b/templates/home.html
@@ -32,7 +32,7 @@
     </nav>
 
     <nav class="loggedInUsers">
-        <a id="Select User" href = "/loggedInUsers" class="loggedInUsers__link" data-link><strong>Logged-in Users</strong></a>
+        <a id="Select User" onclick="SendRegisteredUsers(); "class="loggedInUsers__link" data-link><strong>Logged-in Users</strong></a>
         <div id="usersLog">
           <!--<div style="color: rgb(128, 237, 153);"><a id="Select User" href = "/loggedInUsers" class="loggedInUsers__link" data-link>Arabella</a></div>
             <div style="color: rgb(128, 237, 153);"><a id="Select User" href = "/loggedInUsers" class="loggedInUsers__link" data-link>Duke Oton</a></div>-->
