--- a/templates/home.html
+++ b/templates/home.html
@@ -46,7 +46,7 @@
         <textarea name="postinput" type="text" rows="4" cols="60" id="PostContent" name="Content" placeholder="Description..."></textarea>
         <label for="Post Cat">Catergory:</label>
         <input type="dropdown" id="PostCat" name="Category" placeholder="Choose Categories..">
-        <button class="button postBtn" type="submit">Create Post</button>
+        <button class="button postBtn" id="addPost" type="submit">Create Post</button>
     
     </div>
 
