cookie name and user id in posts table in progress

--- a/templates/home.html
+++ b/templates/home.html
@@ -231,6 +231,7 @@
         </script>
 </body>
 <!-- this script runs register/login/chat modal -->
+<script src="/js/post.js"></script>
 <script src="/js/register.js"></script>
 <script src="/js/login.js"></script>
 <script src="/js/buttons.js"></script>
